# hybrid-photonic-qrc

./: .gitignore  README.md
hpqrc/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
hpqrc/configs/: default.yaml
hpqrc/configs/data/: acn_caltech.yaml  boulder.yaml  pecan_street.yaml  synthetic.yaml  uk_power.yaml
hpqrc/configs/experiment/: ablation_kernels.yaml  ablation_memory.yaml  ablation_quantum.yaml  ablation_qubits.yaml  ablation_scale.yaml  main_comparison.yaml  memory_capacity.yaml
hpqrc/configs/hardware/: local.yaml  t4.yaml
hpqrc/configs/model/: esn.yaml  hpqrc.yaml  lstm.yaml  photonic_only.yaml  qrc_baseline.yaml  sarima.yaml  transformer.yaml
hpqrc/notebooks/: 01_hpqrc_tutorial.ipynb  02_photonic_delay_loop.ipynb  03_quantum_reservoir.ipynb  04_experiments.ipynb  05_memory_capacity.ipynb
hpqrc/outputs/baselines/: baseline_results_20260217_040338.json  baseline_results_20260217_044530.json
hpqrc/paper/: DIAGNOSIS.md  GPU_SETUP.md  HPQRC_RESULTS.md  PHASE0_RESULTS.md  PHASE1_STATUS.md  literature_db.py  references.bib
hpqrc/scripts/: campaign_10seeds.py  download_acn.py  evaluate.py  export_results.py  generate_figures.py  generate_synthetic.py  run_ablation.py  run_memory_benchmark.py  run_phase1_baselines.py  train.py
hpqrc/src/data/: cv_splitter.py  preprocessing.py  synthetic.py
hpqrc/src/evaluation/: memory_capacity.py  metrics.py  parameter_counter.py  spectral.py  statistical_tests.py
hpqrc/src/models/: esn.py  hpqrc.py  lstm_model.py  qrc.py  statistical.py  transformer_model.py
hpqrc/src/photonic/: delay_loop.py  delay_reservoir.py  kernels.py  temporal_encoder.py
hpqrc/src/quantum/: cuquantum_backend.py  encoding.py  observables.py  reservoir.py
hpqrc/src/readout/: linear.py  ridge.py
hpqrc/src/training/: callbacks.py  experiment_runner.py  trainer.py
hpqrc/src/utils/: logging.py  reproducibility.py
hpqrc/tests/: conftest.py  test_cv_splitter.py  test_delay_loop.py  test_hpqrc_e2e.py  test_metrics.py  test_reservoir.py  test_synthetic.py
